@@ -17,7 +17,7 @@ DEFAULT_CONVERTER['m'] = DEFAULT_CONVERTER['s'] * 60
 DEFAULT_CONVERTER['h'] = DEFAULT_CONVERTER['m'] * 60
 DEFAULT_CONVERTER['d'] = DEFAULT_CONVERTER['h'] * 24
 DEFAULT_CONVERTER['w'] = DEFAULT_CONVERTER['d'] * 7
-DEFAULT_CONVERTER['M'] = DEFAULT_CONVERTER['w'] * 4
+DEFAULT_CONVERTER['M'] = DEFAULT_CONVERTER['d'] * 30
 DEFAULT_CONVERTER['Y'] = DEFAULT_CONVERTER['d'] * 365
 
 
@@ -112,9 +112,13 @@ _tests = [
     (None, ''),
     (datetime.timedelta(), '00:00'),
     (datetime.timedelta(days=3, hours=5, minutes=30), '3d 05:30'),
-    (datetime.timedelta(weeks=48), '12M'),
-    (datetime.timedelta(weeks=50), '12M 2w'),
+    (datetime.timedelta(weeks=48), '11M 6d'),
+    (datetime.timedelta(weeks=50), '11M 2w 6d'),
+    (datetime.timedelta(weeks=52), '12M 4d'),
+    (datetime.timedelta(days=360), '12M'),
+    (datetime.timedelta(days=364), '12M 4d'),
     (datetime.timedelta(days=365), '1Y'),
+    (datetime.timedelta(days=366), '1Y 1d'),
     (datetime.timedelta(hours=2, minutes=5, seconds=10), '02:05:10'),
     (datetime.timedelta(minutes=15, microseconds=42), '00:15:00.000042'),
     (datetime.timedelta(days=1, microseconds=42), '1d .000042'),
